feat: Make translation generation easier

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,15 @@
 [bdist_wheel]
 universal = 1
+
+[extract_messages]
+output_file = captcha/locale/django.pot
+
+[init_catalog]
+input_file = captcha/locale/django.pot
+output_dir = captcha/locale
+domain = django
+
+[update_catalog]
+input_file = captcha/locale/django.pot
+output_dir = captcha/locale
+domain = django
