docs: Add config for catalog compilations and instructions in README

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,3 +13,7 @@ domain = django
 input_file = captcha/locale/django.pot
 output_dir = captcha/locale
 domain = django
+
+[compile_catalog]
+directory = captcha/locale
+domain = django
