--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,2 @@
-include AUTHORS.rst
-include CHANGELOG.rst
-include LICENSE
-include README.rst
-recursive-include captcha/templates *
-recursive-include captcha/locale *
+include LICENSE *.rst
+graft captcha
